# noarr-structures

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  format.sh  noarr.sln  policies.md
.github/workflows/: cmake.yml  noarr_docs_check.yml  noarr_docs_check_ubuntu.yml  noarr_docs_check_windows.yml  noarr_matrix_example_test_macos_14.yml  noarr_matrix_example_test_macosl.yml  noarr_matrix_example_test_ubuntu_22.yml  noarr_matrix_example_test_ubuntu_24.yml  noarr_matrix_example_test_ubuntul.yml  noarr_matrix_example_test_ubuntul_clang.yml  noarr_matrix_example_test_ubuntul_gcc.yml  noarr_matrix_example_test_win.yml  noarr_matrix_example_test_winl.yml  noarr_structures_test.yml  noarr_structures_test_win.yml  noarr_test.yml  noarr_test_macos_14.yml  noarr_test_macosl.yml  noarr_test_ubuntu16.yml  noarr_test_ubuntu18.yml  noarr_test_ubuntu20.yml  noarr_test_ubuntu_22.yml  noarr_test_ubuntu_24.yml  noarr_test_ubuntul.yml  noarr_test_ubuntul_clang.yml  noarr_test_ubuntul_gcc.yml  noarr_test_win.yml  noarr_test_winl.yml
OOarrr/: arrr.cpp
algebra/: algebra.tex  algebra_policy.tex
arrr/: Makefile  arrr.hpp  test.cpp
arrr_cuda/: .gitignore  Makefile  README.md  arrr.hpp  cuda.cu
arrr_we_go_again/: arrr.cpp
docs/: BasicUsage.md  DefiningStructures.md  DimensionKinds.md  Glossary.md  README.md  Signature.md  State.md  Traverser.md
docs/dev/: Contain.md  Conventions.md  README.md
docs/other/: Functions.md  Iterator.md  Mangling.md  README.md  SeparateLengths.md  Serialization.md  StructureTraits.md
docs/structs/: README.md  array.md  bcast.md  cuda_step.md  cuda_striped.md  fix.md  hoist.md  into_blocks.md  merge_blocks.md  merge_zcurve.md  rename.md  scalar.md  set_length.md  shift.md  sized_vector.md  slice.md  step.md  tuple.md  vector.md
docs_check/: README.md  Readme.md  check  check.py  config.py  expected-warnings  inner-check.py
examples/matrix/: .gitignore  CMakeLists.txt  README.md  matrix.cpp  noarr_matrix_functions.hpp  z_curve.hpp
include/noarr/: introspection.hpp  structures.hpp  structures_extended.hpp  traversers.hpp
klepl/: 6.-3.-2021a.md  6.-3.-2021b.md  README.md  envelope_spec.md  genialita_swp_pipeline.cpp  policies.md
mayer/: 01-arrays.cpp  02-paths.cpp  02-scratches.txt  03-noarr-dot-syntax.cpp  2021-03-03-api-3.txt  2021-04-03-lode.txt  README.md  requirements.txt
mayer/example-usage/: README.md  histogram.md
mayer/foo/: Makefile  README.md  binding_test.py
mayer/pipeline/: Makefile  README.md
noarr/: .gitignore  CMakeLists.txt  Makefile  README.md  cuda.cu  cuda_msvc.cu  main.cpp  noarr.cpp  noarr.vcxproj  noarr_contain.hpp  noarr_core.hpp  noarr_funcs.hpp  noarr_io.hpp  noarr_is_struct.hpp  noarr_lifting.hpp  noarr_mangle.hpp  noarr_mangle_value.hpp  noarr_scalar.hpp  noarr_scalar_names.hpp  noarr_std_ext.hpp  noarr_struct_decls.hpp  noarr_struct_desc.hpp  noarr_struct_traits.hpp  noarr_structs.hpp  noarr_types.hpp
noarr/example-sketches/: NOTES.md  autobalance.md  bitcoin.md  (+2 more)
noarr_devil/: Makefile  README.md  cuda.cu  main.cpp  open-in-nvidia-docker.sh
noarr_docs_tech/: README.md
noarr_docs_user/: README.md
noarr_pipelines/: .gitignore  CMakeLists.txt  README.md
noarr_pipelines/include/noarr/: structures.hpp
noarr_pipelines/include/noarr/pipelines/: chunk_stream_processor.hpp  compute_node.hpp  consumer_compute_node.hpp
noarr_pipelines/include/noarr/structures/: funcs.hpp  io.hpp  is_struct.hpp  scalar.hpp  scalar_names.hpp  std_ext.hpp  stream_lifting.hpp  struct_decls.hpp  struct_traits.hpp  structs.hpp  wrapper.hpp
noarr_pipelines/src/noarr/: pipelines.hpp  structures.hpp
noarr_pipelines/src/noarr/pipelines/: chunk_stream_processor.hpp  envelope.hpp  linear_pipeline.hpp  playground.hpp  producer_compute_node.hpp
noarr_pipelines/src/noarr/structures/: dummy.hpp
noarr_pipelines/tests/structures/: dummy_test.cpp
policies/: draft_simplified1.cpp  draftsimplified1.cpp  proposal1.tex  testcases
simunek/: 16.2.2021.md  2.3.2021.md  2021.03.16.md  2021.03.23.md  2021.04.13.md  2021.04.27  2021.2.25, 2021.3.1 - interni.md  2021.3.9.md  25.2.2021 - interni.md  25.2.2021, 1.3.2021 - interni.md  9.3.2021.md  Interesing Kernels.md  README.md  interesingKernels.md  notes
tests/: CMakeLists.txt  README.md  algebra_test.cpp  bcast_test.cpp  blocks_border_test.cpp  blocks_dynamic_test.cpp  blocks_static_test.cpp  blocks_test.cpp  compile_test.cpp  compose_test.cpp  constexpr_arithmetic_test.cpp  contain_test.cpp  containers_dots_test.cpp  containers_pipes_test.cpp  contiguous_test.cpp  cuda_striped_test.cpp  cuda_test.cpp  cuda_traverser_test.cpp  decompose_test.cpp  dim_test.cpp  dimension_map_test.cpp  has_bcast_test.cpp  has_blocks_test.cpp  has_into_blocks_dynamic_test.cpp  has_into_blocks_test.cpp  has_layouts_test.cpp  has_merge_blocks_test.cpp  histogram_test.cpp  image_test.cpp  iterator_test.cpp  likes_test.cpp  literal_test.cpp  lower_bound_along_test.cpp  mangle_test.cpp  matrix_test.cpp  noarr_test_cuda_dummy.hpp  noarr_test_defs.hpp  offset_along_test.cpp  planner_iter_test.cpp  planner_test.cpp  (+20 more)
tests/issues/: asmelko_test.cpp
tests/msvc_tester/: msvc_tester.cpp
tests/msvc_tester/catch2/: catch_test_macros.hpp  msvc_tester_utils.hpp
tests/noarr-test/: README.md
tests/noarr-test/include/noarr_test/: counter.hpp  defs.hpp  macros.hpp
tests/noarr-test/src/: noarr_test.cpp
(+208 files in other folders)
